# matricola-finder

./: .gitignore  download.py  package.json  pnpm-lock.yaml  pyproject.toml  render.py  shell.nix  students.yml  tsconfig.json
.github/workflows/: deploy.yml
src/: Main.elm  index.html  script.ts
typings/: staticjinja.pyi
