[tool.poetry]
name = "matricola-finder"
version = "0.1.0"
description = ""
authors = ["rikyiso01 <riky.isola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
pyyaml = "^6.0"
bs4 = "^0.0.1"
staticjinja = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
